apps/lira/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lira
  namespace: lira
spec:
  selector:
    app: lira
  ports:
  - port: 80
    targetPort: 3000
